--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ video {
 }
 
 #reclaim-text {
-    font-size: 5rem;
+    font-size: 3rem;
     font-weight: 700;
     text-align: center;
     color: white;
@@ -57,39 +57,81 @@ video {
     overflow: hidden;
     vertical-align: bottom; /* Align the rolling text properly with the rest */
 }
+#app-name {
+    margin-bottom: 2px;
+    margin-top: 10px;
+}
+#app-desc {
+    text-align: center;
+}
+#app-logo {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+}
 
 .info-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     opacity: 0; /* Start hidden */
+    padding: 8px;
 }
-.explosion-button {
-    position: relative;
-    padding: 15px 30px;
-    font-size: 1.2rem;
-    color: #E7E0EC;
-    background: transparent;
-    border: 2px solid #E7E0EC;
-    border-radius: 50px;
+.glow-on-hover {
+    width: 220px;
+    height: 50px;
+    margin-top: 12px;
+    font-size: 1.3rem;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
     cursor: pointer;
-    overflow: hidden;
-}
-
-.explosion-button span {
     position: relative;
-    z-index: 2;
+    z-index: 0;
+    border-radius: 10px;
 }
 
-.particles {
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #444444, #555555, #666666, #ffffff, #666666, #555555, #444444);
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 5px;
-    height: 5px;
-    background: #E7E0EC;
-    border-radius: 50%;
-    pointer-events: none;
-    opacity: 0;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 1; /* Keep the opacity at 1 to make the glow always visible */
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000;
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
 }
