--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body, html {
 }
 
 .video-container {
+    display: none; /* Initially hidden */
     position: absolute;
     width: 100%;
     height: 100%;
@@ -32,6 +33,7 @@ video {
 }
 
 .text-container {
+    display: none; /* Initially hidden */
     position: absolute;
     display: flex;
     justify-content: center;
@@ -47,17 +49,24 @@ video {
     font-size: 3rem;
     font-weight: 700;
     text-align: center;
-    color: white;
 }
 
 #rolling-text {
     display: inline-block;
     font-weight: bold;
-    color: #E7E0EC;
     overflow: hidden;
     vertical-align: bottom; /* Align the rolling text properly with the rest */
 }
+.loading-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.3rem;
+    z-index: 10;
+}
 #app-name {
+    font-size: 2.5rem;
     margin-bottom: 2px;
     margin-top: 10px;
 }
@@ -95,7 +104,7 @@ video {
 
 .glow-on-hover:before {
     content: '';
-    background: linear-gradient(45deg, #444444, #555555, #666666, #ffffff, #666666, #555555, #444444);
+    background: linear-gradient(45deg, #E7E0EC, #444444, #555555, #666666, #ffffff, #666666, #555555, #444444);
     position: absolute;
     top: -2px;
     left: -2px;
