--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body, html {
     justify-content: center;
     align-items: center;
     background-color: #000000;
-    color: #E7E0EC;
+    color: #ffffff;
     font-family: "Inter", sans-serif;
     font-family: Arial, sans-serif;
     
@@ -88,6 +88,7 @@ video {
 }
 #app-desc {
     text-align: center;
+    font-size: 1.2rem;
 }
 #app-logo {
     border-radius: 50%;
