--- a/style.css
+++ b/style.css
@@ -1,196 +1,50 @@
 body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 105vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 8px;
     background-color: #000000;
     color: #ffffff;
     font-family: "Inter", sans-serif;
     font-family: Arial, sans-serif;
-    
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    overflow:auto;
+}
+a {
+    color: white;
 }
 
-.no-scroll {
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-}
-
-/* Hide scrollbar for WebKit browsers (Chrome, Safari) */
-body::-webkit-scrollbar {
-    display: none;
-}
-
-.video-container {
-    display: none; /* Initially hidden */
-    top: 0;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-        justify-content: center;  /* Center horizontally */
-    align-items: center;  /* Center vertically */
-    overflow: hidden;
-    background: radial-gradient(circle, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 1) 100%); /* Smooth transition effect */
-    transition: background-color 4s ease-in-out; /* Smooth transition effect for background color */
-}
-
-video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    align-content: center;
-    
-}
-
-.text-container {
-    display: none; /* Initially hidden */
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    z-index: 2; /* Ensure text is on top */
-    opacity: 0; /* Start hidden */
-    transition: opacity 1s ease-in-out; /* Smooth transition for text opacity */
-}
-
-#reclaim-text {
-    font-size: 3rem;
-    font-weight: 700;
+.page-main-title-container{
     text-align: center;
+    margin-top: 250px;
 }
-
-#rolling-text {
-    display: inline-block;
-    font-weight: bold;
-    overflow: hidden;
-    vertical-align: bottom; /* Align the rolling text properly with the rest */
-}
-.loading-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 1.3rem;
-    z-index: 10;
-}
-#app-name {
+#page-main-title {
+    text-align: center;
     font-size: 2.5rem;
-    margin-bottom: 2px;
-    margin-top: 10px;
 }
-#app-desc {
+#page-main-desc {
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    line-height: 130%;
 }
-#app-logo {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    margin: 10px;
+.cover-embed{
+    margin: 30px;
 }
 
-.info-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    opacity: 0; /* Start hidden */
-    margin-top: -6vh;
-    padding: 8px;
-}
-.glow-on-hover {
-    width: 220px;
-    height: 50px;
-    margin-top: 12px;
-    font-size: 1.1rem;
-    border: none;
-    outline: none;
-    color: #fff;
-    background: #111;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    border-radius: 10px;
+.cover-desc {
+    margin-left: 8vw;
+    margin-right: 8vw;
+    justify-content: center;
+    font-size: 1.5rem;
 }
 
-.glow-on-hover:before {
-    content: '';
-    background: linear-gradient(45deg, #E7E0EC, #444444, #555555, #666666, #ffffff, #666666, #555555, #444444);
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    opacity: 1; /* Keep the opacity at 1 to make the glow always visible */
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-}
-
-.glow-on-hover:active {
-    color: #000;
-}
-
-.glow-on-hover:active:after {
-    background: transparent;
-}
-
-.glow-on-hover:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #111;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
-}
-
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
-}
-.scroll-message {
-    position: fixed;
-    bottom: 30px; 
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 10px 20px;
-    font-size: 0.9rem;
-    text-align: center;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
-    z-index: 1000; /* Ensure it appears above other content */
-}
-
-.social-links {
-    margin: 8px 0;
-}
-.social-links a {
-    color: #E7E0EC;
-    margin: 0 10px;
-    text-decoration: none;
-    font-size: 24px;
-}
 /* Navbar Styles */
 header {
     width: 100%;
     position: fixed;
     top: 0;
     z-index: 1000;
+}
+#app-logo-nav{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
 
 .navbar {
@@ -203,7 +57,6 @@ header {
 .logo a {
     text-decoration: none;
     color: #fff;
-    font-size: 1.5rem;
     font-weight: bold;
 }
 
@@ -216,7 +69,8 @@ header {
 .nav-links ul li a {
     text-decoration: none;
     color: #fff;
-    font-size: 1rem;
+    font-size: 1.2rem;
+    font-weight: 400;
     transition: color 0.3s ease;
 }
 
@@ -226,10 +80,12 @@ header {
 
 /* Hamburger Menu */
 .hamburger-menu {
+    user-select: none;
     display: none;
     flex-direction: column;
     cursor: pointer;
     gap: 5px;
+    padding: 15px;
     z-index: 1001;
     margin: 16px;
 }
@@ -253,8 +109,8 @@ header {
         position: fixed;
         top: 0;
         right: 0;
-        height: 100vh;
-        width: 100vw;
+        height: 100%;
+        width: 100%;
         background-color: rgba(51, 51, 51, 0.9); /* Dark background with transparency */
         backdrop-filter: blur(10px); /* Blur effect */
         flex-direction: column;
