--- a/homepage/style.css
+++ b/homepage/style.css
@@ -193,6 +193,12 @@ video {
 
 #circle-container {
     opacity: 0;
+    position: fixed;
+    width: 100%;
+    display: flex;
+    height: 200px; /* Adjust the height as needed */
+    overflow: hidden; 
+    
 }
 .circle {
     position: absolute;
