--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ a {
     font-size: 1.5rem;
 }
 
+
 /* Navbar Styles */
 header {
     width: 95vw;
@@ -97,6 +98,65 @@ header {
 }
 .nav-social-link{
     display: none;
+}
+
+
+.glow-on-hover {
+    width: 220px;
+    height: 50px;
+    margin-top: 12px;
+    font-size: 1.1rem;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #E7E0EC, #444444, #555555, #666666, #ffffff, #666666, #555555, #444444);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 1; /* Keep the opacity at 1 to make the glow always visible */
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000;
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
 }
 
 /* Media Queries for Mobile */
